# hackthon2026

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: azure-static-web-apps-red-wave-0ac496b0f.yml  backend.yml  java.yml  main.yml
Backend/Java/: dockerfile  pom.xml
Backend/Java/src/main/resources/: application-test.properties
Backend/Python/: .env.example  .gitignore  dockerfile  main.py  pyproject.toml
Backend/Python/app/DTOs/: analysis_dto.py
Backend/Python/app/config/: config.py
Backend/Python/app/controllers/: analysis_controller.py
Backend/Python/app/routes/: analysis_router.py
Backend/Python/app/services/: ml_service.py  supabase_client.py
Backend/Python/tests/: test_health.py
Docs/: BirdsDiagram.drawio  Database.sql
Frontend/: AGENTS.md  dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json
Frontend/docs/agent-guides/: frontend-guidelines.md
Frontend/src/: App.tsx  main.tsx
Frontend/src/components/: ResourceLinksList.tsx
Frontend/src/components/chat/: CameraModal.tsx  ChatInputBar.tsx  camera-modal.css  chat.css
Frontend/src/constants/: labels.ts  links.ts
Frontend/src/features/auth/: auth.css
Frontend/src/features/auth/components/: AuthLayout.tsx  InputControl.tsx  PasswordField.tsx  TextField.tsx
Frontend/src/features/auth/pages/: LoginPage.tsx  RegisterPage.tsx
Frontend/src/features/auth/types/: auth.ts
Frontend/src/features/home/: home.css
Frontend/src/hooks/: useCounter.ts
Frontend/src/services/: chatService.ts
Frontend/src/types/: home.ts
(+65 files in other folders)
