[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.2",
    "tensorflow-cpu>=2.21.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]